--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -3,13 +3,15 @@ db.data_resource_name = java:comp/env/jdbc/PerfumeryDB
 product.get_all = call get_short_products(?)
 product.get = SELECT name, id_type, image_path, description FROM perfumery_bd.products where id_product = ?
 product.get_sizes = call get_sizes_product(?)
-product.create = INSERT INTO products(description, id_type, image_path, name) VALUES (?, ?, ?, ?)
+product.create = select create_product(?, ?, ?, ?)
 product.update = UPDATE products SET id_type=?, description=?, image_path=?, name=? WHERE id_product=?
 product.delete = DELETE FROM products WHERE id_product=?
 
 customer.register = call perfumery_bd.register(?, ?, ?, ?, ?, ?, ?)
 customer.login = select id_customer, name, last_name, city, address, phone, email, id_role from customers where email = ? and password = ?
 customer.get_id = select id_customer from customers where email = ? and password = ?
+customer.get = SELECT name, last_name, city, address, phone, email, id_role, password FROM customers where id_customer=?
+customer.update = UPDATE customers SET name=?, last_name=?, city=?, address=?, phone=?, email=?, password=? WHERE id_customer=?
 
 size.get_all = SELECT * FROM sizes
 size.get = SELECT * FROM sizes WHERE id_size=?
@@ -21,4 +23,8 @@ order.create_main = select create_order(?)
 order.create = INSERT INTO order_product (id_order, count, id_size_product) VALUES (?, ?, ?)
 order.get_all = call perfumery_bd.get_all_orders()
 order.delete = DELETE FROM `perfumery_bd`.`order` WHERE id_order=?
+
+size_product.delete = DELETE FROM size_product WHERE id_product=?
+size_product.id_price = SELECT id_price FROM size_product where id_product=?
+size_product.create = select perfumery_bd.create_size_product(?, ?, ?)
 
